# chip

./: .gitignore  CHIP開發日誌_2026-06-26.docx  CHIP開發日誌_2026-06-26_v2.docx  CHIP開發日誌_2026-06-27.docx  CHIP開發日誌_2026-06-28_v0.6.docx  CHIP開發日誌_2026-07-13_v0.7.docx  CHIP開發日誌_2026-07-16_v0.8.docx  CHIP開發日誌_2026-07-19_v0.10.docx  CHIP開發日誌_2026-07-24_v0.11.docx  README.md  backfill_market_margin.py  backfill_overlay.py  collect_daily.py  launcher.ps1  stopper.ps1  tpex_collect_v2.js  台灣籌碼平台_開發規劃書_v1.0.docx  啟動.bat  結束.bat
backend/: .env.example  _supervisor.bat  load_tpex_json.py  pyproject.toml  run_bsr_collect.py  run_tpex_collect.py  test_histock.py  test_options_api.py  test_options_p1.py  tst_all_ep.py  verify_phase1.py
backend/app/: main.py
backend/app/api/v1/: admin.py  chip.py  etf.py  futures.py  global_calendar.py  health.py  market_margin.py  options.py  reports.py  stocks.py
backend/app/collectors/: __init__.py  base.py  bsr_broker_chips.py  etf_holdings.py  market_margin.py  taifex_futures.py  taifex_options.py  tpex_broker_chips.py  tpex_chip.py  trading_calendar.py  twse_broker_chips.py  twse_institutional.py  twse_margin.py  twse_stock_price.py  twse_stocks.py
backend/app/collectors/global_calendar/: db.py  fetch.py  (+6 more)
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  etf.py  processed.py  raw.py  reference.py
backend/app/processors/: chip_processor.py
backend/app/reporters/: chip_reporter.py
backend/app/scheduler/: jobs.py
backend/app/static/: etf_dashboard.html  global_calendar.html  margin_dashboard.html
