[project]
name = "chip-platform"
version = "0.1.0"
description = "Project Alpha: Taiwan Chip Intelligence Platform"
requires-python = ">=3.12, <3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.5",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pandas>=2.2",
    "numpy>=2.1",
    "requests>=2.32",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",
    "openpyxl>=3.1",
    "lxml>=6.1.1",
    "browser-cookie3>=0.20.1",
    "ddddocr>=1.6.1",
    "playwright>=1.60.0",
    # 交易日曆模組（global_calendar）：investing.com 直連會 403，需 curl_cffi 做 Chrome 指紋模擬
    "curl-cffi>=0.7",
    "beautifulsoup4>=4.12",
    # 期貨/衍生品交易所官方行事曆（EUREX/HKEX/JPX/SGX/TAIFEX/CME…）：規則制、含早收
    "exchange-calendars>=4.10",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "httpx>=0.27",
]
